gobmkida/c2/do_compute_effective_worm_sizes
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1079:6: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'
v6 = do_compute_effective_worm_sizes_worms[21]; 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1109:7: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'; did you mean 'do_compute_effective_worm_sizes'?
v11 = do_compute_effective_worm_sizes_worms; 
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      do_compute_effective_worm_sizes
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1036:7: note: 'do_compute_effective_worm_sizes' declared here
void  do_compute_effective_worm_sizes( int color, int ( *cw)[4], int *ncw, int max_distance) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1150:1: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'; did you mean 'do_compute_effective_worm_sizes'?
do_compute_effective_worm_sizes_worms[v10][v16++] = do_compute_effective_worm_sizes_worms[v14][v17]; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
do_compute_effective_worm_sizes
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1036:7: note: 'do_compute_effective_worm_sizes' declared here
void  do_compute_effective_worm_sizes( int color, int ( *cw)[4], int *ncw, int max_distance) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1150:1: error: subscript of pointer to function type 'void (int, int (*)[4], int *, int)'
do_compute_effective_worm_sizes_worms[v10][v16++] = do_compute_effective_worm_sizes_worms[v14][v17]; 
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1150:53: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'
do_compute_effective_worm_sizes_worms[v10][v16++] = do_compute_effective_worm_sizes_worms[v14][v17]; 
                                                    ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1156:7: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'
v18 = do_compute_effective_worm_sizes_worms[v14][v17]; 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1157:6: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'
if ( do_compute_effective_worm_sizes_worms[v10][0] != v18 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1225:12: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'
v27 = worm[do_compute_effective_worm_sizes_worms[v21][v26]].effective_size + 1.0; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1227:18: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'
v27 = v25 + worm[do_compute_effective_worm_sizes_worms[v21][v26]].effective_size; 
                 ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1228:6: error: use of undeclared identifier 'do_compute_effective_worm_sizes_worms'
worm[do_compute_effective_worm_sizes_worms[v21][v26]].effective_size = v27; 
     ^
10 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/do_compute_effective_worm_sizes/src/obj/1/worm.o] Error 1
